# HW_32_GTEST

./: .gitignore  CMakeLists.txt  README.md
Gtest/: CMakeLists.txt  test_my_class.cpp
Gtest/mocks/: mock_test.h
HW_32/: CMakeLists.txt  main.cpp  my_class.h
